--- a/content/about.html
+++ b/content/about.html
@@ -18,9 +18,9 @@ slug: about
 <link href="/rmarkdown-libs/fontawesome/font-awesome.min.css" rel="stylesheet" />
 
 
-<video id="example_video_1" class="video-js vjs-default-skin vjs-fluid" controls="" preload="none" poster="https://play.xjtlu.edu.cn/d33b4a8ce3984172ba48e102ceaaf8c2/snapshots/7da9e6b5c2a8486ba0c765ccb1e2a465-00005.jpg">
-<source src="https://play.xjtlu.edu.cn/sv/54f8b7fc-17195d88845/54f8b7fc-17195d88845.mp4" type="video/mp4">
-</video>
+<iframe src="../../html/HES_emphasis_areas/Knops.Johannes_HES_emphasis_areas.html" width="100%" height="450px">
+</iframe>
+<p><a href="../../html/HES_emphasis_areas/Knops.Johannes_HES_emphasis_areas.html">Full-screen View</a></p>
 <p>The Department of Health and Environmental Sciences combines distinctive disciplinary approaches to understand and solve some of the most critical challenges faced by society today.</p>
 <p>In our programmes, we provide our students with the theoretical and practical foundations needed for a successful career working to improve the health and well-being of populations and the environment. Our students gain a strong grounding in natural and social sciences, as well as medical humanities, in order to develop a holistic view of the complex processes contributing to the health of populations, and those behind globalised environmental issues.</p>
 <p>Our research is brought directly into the classroom, providing a learning and teaching experience that combines theory with the most current knowledge in public health and environmental science.</p>
@@ -39,4 +39,7 @@ slug: about
 <h3>Our location</h3>
 <div id="htmlwidget-1" style="width:100%;height:480px;" class="leaflet html-widget"></div>
 <script type="application/json" data-for="htmlwidget-1">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addAwesomeMarkers","args":[31.2686,120.7405,{"icon":"flag","markerColor":"red","iconColor":"black","spin":false,"squareMarker":false,"iconRotate":0,"font":"monospace","prefix":"fa"},null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addTiles","args":["http://webrd02.is.autonavi.com/appmaptile?lang=zh_cn&size=1&scale=1&style=8&x={x}&y={y}&z={z}",{"minZoom":3,"maxZoom":17,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false},null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://amap.com\">amap.com<\/a >"}]}],"limits":{"lat":[31.2686,31.2686],"lng":[120.7405,120.7405]},"setView":[[31.2716,120.7405],16,[]]},"evals":[],"jsHooks":[]}</script>
+<video id="example_video_1" class="video-js vjs-default-skin vjs-fluid" controls="" preload="none" poster="https://play.xjtlu.edu.cn/d33b4a8ce3984172ba48e102ceaaf8c2/snapshots/7da9e6b5c2a8486ba0c765ccb1e2a465-00005.jpg">
+<source src="https://play.xjtlu.edu.cn/sv/54f8b7fc-17195d88845/54f8b7fc-17195d88845.mp4" type="video/mp4">
+</video>
 </div>
