--- a/content/about.html
+++ b/content/about.html
@@ -18,7 +18,7 @@ slug: about
 <link href="/rmarkdown-libs/fontawesome/font-awesome.min.css" rel="stylesheet" />
 
 
-<iframe src="../../html/HES_emphasis_areas/Knops.Johannes_HES_emphasis_areas.html" width="800" height="450px">
+<iframe src="../../html/HES_emphasis_areas/Knops.Johannes_HES_emphasis_areas.html" width="100%" height="450px">
 </iframe>
 <p><a href="../../html/HES_emphasis_areas/Knops.Johannes_HES_emphasis_areas.html">Full-screen View</a></p>
 <p>The Department of Health and Environmental Sciences combines distinctive disciplinary approaches to understand and solve some of the most critical challenges faced by society today.</p>
